<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:theme="@style/Theme.AppCompat"
        app:navigationIcon="@drawable/ic_close_black_24dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/ifttt_about_padding_horizontal"
            android:paddingRight="@dimen/ifttt_about_padding_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ifttt_primary_service_icon"
                    android:layout_width="@dimen/ifttt_about_icon_size"
                    android:layout_height="@dimen/ifttt_about_icon_size"
                    android:layout_margin="@dimen/ifttt_space_small"/>

                <ImageView
                    android:layout_width="@dimen/ifttt_about_icon_size"
                    android:layout_height="@dimen/ifttt_about_icon_size"
                    android:padding="@dimen/ifttt_space_small"
                    android:layout_marginStart="@dimen/ifttt_space_small"
                    android:layout_marginEnd="@dimen/ifttt_space_small"
                    android:src="@drawable/ic_ifttt_about_arrow"/>

                <ImageView
                    android:id="@+id/ifttt_secondary_service_icon"
                    android:layout_width="@dimen/ifttt_about_icon_size"
                    android:layout_height="@dimen/ifttt_about_icon_size"
                    android:layout_margin="@dimen/ifttt_space_small"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifttt_about_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ifttt_space_med"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:text="@string/ifttt_about_title"
                android:textSize="@dimen/ifttt_about_title_size"
                android:textAppearance="@style/AboutIfttt.Title"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifttt_about_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ifttt_space_large"
                android:drawablePadding="@dimen/ifttt_about_drawable_padding"
                android:drawableStart="@drawable/ic_ifttt_about_1"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:text="@string/ifttt_about_1"
                android:textAppearance="@style/AboutIfttt.Description"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifttt_about_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ifttt_about_description_margin_top"
                android:drawablePadding="@dimen/ifttt_about_drawable_padding"
                android:drawableStart="@drawable/ic_ifttt_about_2"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:text="@string/ifttt_about_2"
                android:textAppearance="@style/AboutIfttt.Description"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifttt_about_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ifttt_about_description_margin_top"
                android:drawablePadding="@dimen/ifttt_about_drawable_padding"
                android:drawableStart="@drawable/ic_ifttt_about_3"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:text="@string/ifttt_about_3"
                android:textAppearance="@style/AboutIfttt.Description"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ifttt_about_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ifttt_about_description_margin_top"
                android:drawablePadding="@dimen/ifttt_about_drawable_padding"
                android:drawableStart="@drawable/ic_ifttt_about_4"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:text="@string/ifttt_about_4"
                android:textAppearance="@style/AboutIfttt.Description"/>

            <TextView
                android:id="@+id/ifttt_manage_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ifttt_space_med"
                android:background="@drawable/ifttt_about_button_background"
                android:fontFamily="@font/avenir_next_ltpro_bold"
                android:paddingBottom="@dimen/ifttt_space_small"
                android:paddingEnd="@dimen/ifttt_space_med"
                android:paddingStart="@dimen/ifttt_space_med"
                android:paddingTop="@dimen/ifttt_space_small"
                android:text="@string/ifttt_manage_connection"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ifttt_about_button_text_size"/>

            <ImageView
                android:id="@+id/google_play_link"
                android:layout_width="@dimen/ifttt_about_google_play_badge_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ifttt_space_med"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_google_play_store_download"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/term_and_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ifttt_space_med"
                android:alpha="0.5"
                android:fontFamily="@font/avenir_next_ltpro_demi"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/ifttt_about_text_line_space"
                android:textColor="@android:color/white"
                android:background="?selectableItemBackground"
                android:padding="@dimen/ifttt_space_small"
                android:textAppearance="@style/AboutIfttt.Description"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
